# sync-pak

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build.rs  com.shininggrimace.SyncPak.yml
.agents/skills/coding-standards/: SKILL.md
.cargo/: config.toml
.github/workflows/: continuous-build.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/shininggrimace/syncpak/: SyncExecutionService.java  SyncPakActivity.java
docs/: android-packaging.md  feasibility.md  provider-conformance.md  provider-probes.md
examples/: desktop_notification.rs  provider_operations.rs
flatpak/: README.md  cargo-sources.json
snap/: README.md  snapcraft.yaml
src/: activity_controller.rs  activity_presentation.rs  activity_presentation_tests.rs  activity_snapshot.rs  add_only_execution.rs  add_only_execution_tests.rs  android_folder_picker.rs  android_foreground_execution.rs  app_controller.rs  archive_create.rs  archive_create_tests.rs  archive_create_writer.rs  archive_download.rs  archive_download_store.rs  archive_download_store_tests.rs  archive_download_tests.rs  archive_execution.rs  archive_execution_tests.rs  archive_naming.rs  archive_prune.rs  archive_retention.rs  archive_store.rs  archive_store_tests.rs  archive_upload.rs  archive_upload_tests.rs  atomic_write.rs  atomic_write_tests.rs  background_queue.rs  background_queue_tests.rs  background_worker.rs  cancellation.rs  capabilities.rs  comparison.rs  configuration.rs  confirmed_preflight.rs  connection_controller.rs  connection_delete_controller.rs  connection_form_controller.rs  connection_form_data.rs  connection_form_state.rs  (+98 more)
src/configuration/: connections.rs  credentials.rs  credentials_tests.rs  diagnostics.rs  model.rs  providers.rs  store.rs  store_tests.rs  validation.rs
ui/: app.slint  dimensions.slint
