[package]
name = "sync-pak"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
feasibility-probes = []
provider-probes = ["provider-s3", "dep:tokio"]
provider-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
aws-config = { version = "=1.9.0", default-features = false, features = ["rt-tokio", "rustls"], optional = true }
aws-sdk-s3 = { version = "=1.138.1", default-features = false, features = ["rt-tokio", "rustls"], optional = true }
keyring-core = "=1.0.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
slint = { version = "=1.17.1", default-features = false, features = ["accessibility", "compat-1-2", "std"] }
tokio = { version = "=1.52.4", features = ["macros", "rt-multi-thread"], optional = true }
uuid = { version = "=1.21.0", features = ["v4"] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
notify-rust = "=4.18.0"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "=0.17.2", default-features = false, features = ["wayland", "xdg-portal"] }
zbus-secret-service-keyring-store = { version = "=1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
rfd = { version = "=0.17.2", default-features = false, features = ["common-controls-v6"] }
windows-native-keyring-store = { version = "=1.1.0", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = { version = "=1.17.1", default-features = false, features = ["backend-winit", "renderer-femtovg"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "=1.0.0"
jni = "=0.22.4"
slint = { version = "=1.17.1", default-features = false, features = ["backend-android-activity-06", "renderer-femtovg"] }

[build-dependencies]
slint-build = "=1.17.1"

[[example]]
name = "desktop_notification"
required-features = ["feasibility-probes"]

[[example]]
name = "provider_operations"
required-features = ["provider-probes"]
